Add host names to ingresses

--- a/infrastructure/controllers/traefik/ingress.yml
+++ b/infrastructure/controllers/traefik/ingress.yml
@@ -9,12 +9,13 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - http:
+    - host: traefik.home.youriulbri.ch
+      http:
         paths:
-          - pathType: Prefix
-            path: "/"
-            backend:
-              service:
-                name: traefik
-                port:
-                  number: 9000
+        - pathType: Prefix
+          path: "/"
+          backend:
+            service:
+              name: traefik
+              port:
+                number: 9000
