--- a/infrastructure/controllers/cert-manager/helm-release.yml
+++ b/infrastructure/controllers/cert-manager/helm-release.yml
@@ -4,6 +4,11 @@ kind: HelmRelease
 metadata:
   name: cert-manager
   namespace: cert-manager
+  annotations:
+    kustomize.toolkit.fluxcd.io/depends-on: |
+      - group: apps
+        kind: Deployment
+        name: kube-vip-cloud-provider
 spec:
   chart:
     spec:
