--- a/infrastructure/controllers/kube-vip-cloud-controller/kustomization.yml
+++ b/infrastructure/controllers/kube-vip-cloud-controller/kustomization.yml
@@ -1,8 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
-  - kube-vip-cloud-controller
-  - cert-manager
-  - traefik
-  - longhorn
+  - deployment.yml
+  - configmap.yml
