--- a/infrastructure/controllers/traefik/helm-release.yml
+++ b/infrastructure/controllers/traefik/helm-release.yml
@@ -4,6 +4,11 @@ kind: HelmRelease
 metadata:
   name: traefik
   namespace: traefik
+  annotations:
+    kustomize.toolkit.fluxcd.io/depends-on: |
+      - group: apps
+        kind: Deployment
+        name: kube-vip-cloud-provider
 spec:
   chart:
     spec:
