--- a/apps/coredns/helm-release.yml
+++ b/apps/coredns/helm-release.yml
@@ -4,8 +4,6 @@ kind: HelmRelease
 metadata:
   name: coredns
   namespace: coredns
-  annotations:
-    kube-vip.io/loadbalancerIPs: "10.0.100.100"
 spec:
   chart:
     spec:
@@ -22,6 +20,8 @@ spec:
     isClusterService: false
     replicaCount: 2
     serviceType: "LoadBalancer"
+    service:
+      loadBalancerIP: "10.0.20.200"
     zoneFiles:
       - filename: home.db
         domain: home.youriulbri.ch
