--- a/infrastructure/controllers/kustomization.yml
+++ b/infrastructure/controllers/kustomization.yml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - kube-vip-cloud-controller
+  - prometheus
   - cert-manager
   - traefik
   - longhorn
